correjir codigo css
correjir codigo de css que estaba mal

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -19,7 +19,7 @@
                 </label>
                 <nav class = "navbar">
                     <ul class = "enlaces">
-                        <li><a id = "inicio"href = "index.html">Inicio</a></li>
+                        <li><a id = "inicio"href = "../html/index.html">Inicio</a></li>
                         <li><a id = "blog" href = "index.html#contacto">Contactos</a></li>
                         <li><a id = "nosotros"href = "../html/nosotros.html">Nosotros</a></li>
                         <li><a id = "consejos"href = "#">Portafolios próximamente</a></li>
