cambiar los enlaces de las paginas
para poner de pasar una pagina a otra mas facil

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 </label>
                 <nav class = "navbar">
                     <ul class = "enlaces">
-                        <li><a id = "inicio"href = "../html/index.html">Inicio</a></li>
+                        <li><a id = "inicio"href = "index.html">Inicio</a></li>
                         <li><a id = "blog" href = "#contacto">Contactos</a></li>
-                        <li><a id = "nosotros"href = "../html/nosotros.html">Nosotros</a></li>
+                        <li><a id = "nosotros"href = "nosotros.html">Nosotros</a></li>
                         <li><a id = "portafolios"href = "#">Portafolios próximamente </a></li>
                         <li><a href = "https://www.facebook.com/profile.php?id=61561768546669"><img src = "../imagenes/facebook-02-stroke-rounded.svg"></a></li>
                         <li><a href = "https://www.instagram.com/weblap22"><img src = "../imagenes/instagram-stroke-rounded.svg"></a></li>
