--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta property="twitter:description" content="Inicia tu aventura digital con nosotros. En Weblap, te ayudamos a establecer una presencia sólida en Internet." />
     <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
     <!-- Meta Tags Generated with https://metatags.io -->
+    <meta name="keywords" content="desarrollo web costa rica,páginas web,weblap">
 </head>
 <body>
     <header>
